# me133a_hand

./: README.md  test.txt
mannequin-hand-3d-model-1.snapshot.7/: MH_Hand1.SLDASM  MH_Hand_FullAssem.SLDASM  ~$MH_Hand_FullAssem.SLDASM
simple_hand/: CMakeLists.txt  package.xml
simple_hand/launch/: display.launch  gazebo.launch
simple_hand/meshes/: base_link.STL  index_1.STL  index_2.STL  index_3.STL  middle_1.STL  middle_2.STL  middle_3.STL  pinky_1.STL  pinky_2.STL  pinky_3.STL  ring_1.STL  ring_2.STL  ring_3.STL  ring_pink_palm.STL  thumb_1.STL  thumb_2.STL  thumb_3.STL
simple_hand/urdf/: simple_hand.csv  simple_hand.urdf
simple_hand_2/: CMakeLists.txt  package.xml
simple_hand_2/config/: joint_names_simple_hand_2.yaml
simple_hand_2/launch/: display.launch  gazebo.launch
simple_hand_2/meshes/: base_link.STL  index_1.STL  index_2.STL  index_3.STL  middle_1.STL  middle_2.STL  middle_3.STL  pinky_1.STL  pinky_2.STL  pinky_3.STL  ring_1.STL  ring_2.STL  ring_3.STL  ring_pink_palm.STL  thumb_1.STL  thumb_2.STL  thumb_3.STL
simple_hand_2/urdf/: simple_hand_2.csv  simple_hand_2.urdf
simple_hand_3/: CMakeLists.txt  package.xml
simple_hand_4/: CMakeLists.txt  package.xml
simple_hand_5/: CMakeLists.txt  package.xml
simple_hand_5/config/: joint_names_simple_hand_5.yaml
simple_hand_5/launch/: display.launch  gazebo.launch  rviz_hand.launch  rviz_hand_allcount.launch
simple_hand_5/lib/hw6code/: kinematics.py
simple_hand_5/meshes/: base_link.STL  index_1.STL  index_2.STL  index_3.STL  middle_1.STL  middle_2.STL  middle_3.STL  pinky_1.STL  pinky_2.STL  pinky_3.STL  ring_1.STL  ring_2.STL  ring_3.STL  ring_pinky_extra.STL  thumb_1.STL  thumb_2.STL  thumb_3.STL
simple_hand_5/scripts/: finger_counting.py  finger_counting_copy.py  finger_counting_w_free.py  hand_math.py  testingFile.py  viewhand.rviz
simple_hand_5/urdf/: simple_hand_5.csv  simple_hand_5.urdf
(+38 files in other folders)
