<package format="2">
  <name>simple_hand_5</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for simple_hand_5</p>
    <p>This package contains configuration data, 3D models and launch files
for simple_hand_5 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>


  <export>
    <architecture_independent />
  </export>
</package>
